--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -34,4 +34,9 @@ tasks:
   bash:
     desc: "Connect to container's prompt"
     cmds:
-      - "docker run -it -p 8080:8080 my-app /bin/sh || true"
+      - "docker run -it -p 8080:8080 --entrypoint '/bin/bash' my-app || true"
+      
+  taskfile-demo:
+      desc: "Run default task"
+      cmds:
+        - "docker run -it -p 8080:8080 --entrypoint 'task' my-app || true"
