--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,7 +15,7 @@ tasks:
     desc: "Run the Docker container"
     cmds:
       - "docker rm -f my-app || true"  # Remove any existing container
-      - "docker run  -p 8080:8080 --name my-app my-app"
+      - "docker run  -v $PWD/app/content:/app/content -p 8080:8080 --name my-app my-app"
 
   stop:
     desc: "Stop the Docker container"
@@ -35,7 +35,7 @@ tasks:
     desc: "Connect to container's prompt"
     cmds:
       - "docker run -it -p 8080:8080 --entrypoint '/bin/bash' my-app || true"
-      
+
   taskfile-demo:
       desc: "Run default task"
       cmds:
