Make task run re-entrant -- now picks up changes in content directory, which is where we should also run jupyter lab

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,7 +15,7 @@ tasks:
     desc: "Run the Docker container"
     cmds:
       - "docker rm -f my-app || true"  # Remove any existing container
-      - "docker run -p 8080:8080 --name my-app my-app"
+      - "docker run -v $PWD/content:/content -p 8080:8080 --name my-app my-app"
 
   stop:
     desc: "Stop the Docker container"
@@ -34,9 +34,9 @@ tasks:
   bash:
     desc: "Connect to container's prompt"
     cmds:
-      - "docker run -it -p 8080:8080 --entrypoint '/bin/bash' my-app || true"
+      - "docker run -it -v $(pwd)/content:/content -p 8080:8080 --entrypoint '/bin/bash' my-app || true"
 
   taskfile-demo:
       desc: "Run default task"
       cmds:
-        - "docker run -it -v $(pwd)/hello:/hello -p 8080:8080 --entrypoint 'task' my-app || true"
+        - "docker run -it -v $(pwd)/content:/content -p 8080:8080 --entrypoint 'task' my-app || true"
